Fixed background image to be from very top to very bottom on small displays

--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ h2 a {
 }
 
 .background {
-    background: url(/images/background.png) no-repeat center;
+    background: url(/images/background.png) no-repeat;
     background-size: contain;
     position: fixed;
     top: 0;
